--- a/MPGLabs/MPGLabs/MPGLabs.csproj
+++ b/MPGLabs/MPGLabs/MPGLabs.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinearAcceleratedMotion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector3D.cs" />
