--- a/MPGLabs/MPGLabs/MPGLabs.csproj
+++ b/MPGLabs/MPGLabs/MPGLabs.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinearAcceleratedMotion.cs" />
+    <Compile Include="MPGPhysics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector3D.cs" />
